apps/dev/bookstack/helm-manifest.yaml
---
# Source: bookstack/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  labels:
    app.kubernetes.io/service: bookstack
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bookstack
    app.kubernetes.io/version: version-v26.05.5
    helm.sh/chart: bookstack-0.20.0
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/name: bookstack






---
# Source: bookstack/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  labels:
    app.kubernetes.io/instance: bookstack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bookstack
    app.kubernetes.io/version: version-v26.05.5
    helm.sh/chart: bookstack-0.20.0
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bookstack
      app.kubernetes.io/instance: bookstack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bookstack
        app.kubernetes.io/instance: bookstack
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 911
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:version-v26.09.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bookstack-config
