apps/dev/bookstack/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack
  namespace: bookstack
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`book.stadthagen.dev`)
      kind: Rule
      services:
        - name: bookstack
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: bookstack-tls
